--- a/snbi2026-holle-list.qmd
+++ b/snbi2026-holle-list.qmd
@@ -1,6 +1,6 @@
 ---
 title: "The Digitised Holle List Project: Building a Database from Legacy Materials for Conserving Indigenous Indonesian Languages"
-title-prefix: "Digitsed Holle List"
+title-prefix: "The Digitsed Holle List"
 author: 
   - name:
       given: "Gede Primahadi Wijaya"
@@ -19,8 +19,6 @@ date: 2026-02-03
 date-modified: now
 abstract: |
   Advances in cloud computing, as well as computational tools for extracting text from images, offer an opportunity to scale up the development of digital databases for Indigenous languages. This paper reports on the application of these advances to the digitalisation of old, paper-based lexical items of over a hundred Indigenous languages in Indonesia; these items are part of the so-called [Holle List (HL)](http://hdl.handle.net/1885/144430). After introducing the (structure of the) HL, the paper underlines the motivation for the [HL digitalisation project](https://portal.sds.ox.ac.uk/projects/Digitised_Holle_List/259172). It then provides an overview of *[Google Colab](https://colab.research.google.com/)* as a free cloud-computing platform for executing a series of optical character recognition (OCR) operations on hundreds of scanned pages of the HL, utilising *[pytesseract](https://pypi.org/project/pytesseract/)*, a Python interface for *[Google’s Tesseract-OCR engine](https://github.com/tesseract-ocr/tesseract)*. Advantages (e.g., computational searchability and manipulability), as well as issues (especially typos and unrecognised characters) in the plain-text OCR outputs, are discussed. In conclusion, the paper highlights the importance of digital technology in conserving Indigenous languages via digital platforms, despite some unavoidable challenges that require human intervention.
-  
-  _**Keywords**_: _Holle List; Indigenous Indonesian languages; Digital Humanities; Lexical databases_
 format:
     html: 
       page-layout: full
@@ -29,6 +27,8 @@ format:
       fig-asp: 0.618
       fig-dpi: 300
       code-fold: true
+      code-tools: 
+        source: https://github.com/complexico/snbi2026-holle-list
       citations-hover: true
       footnotes-hover: true
       toc: true
@@ -49,18 +49,49 @@ format:
         sec-prefix: §
 editor: visual
 bibliography: references.bib
+cap-location: top
+include-in-header:
+  - text: |
+     <link rel = "shortcut icon" href = "favicon-round.ico" />
 csl: apa7.csl
 google-scholar: true
 search: true
+format-links: false
+keywords:
+  - Holle List
+  - Indigenous Indonesian languages
+  - Digital Humanities
+  - Lexical databases
+  - Linguistics
+  - Data Science
+copyright:
+  holder: Gede Primahadi Wijaya Rajeg
+  year: 2026
+license: "CC BY-NC-SA"
+funding:
+  statement: "The project reported in this paper has been supported by the following grants."
+  awards:
+    - source: "Arts and Humanities Research Council (AHRC) grant *Lexical resources for Enggano, a threatened language of Indonesia* ([AH/W007290/1](https://app.dimensions.ai/details/grant/grant.12915105))"
+    - source: "Australian Research Council (ARC) grant *Languages of Barrier Islands, Sumatra: Description, History and Typology* ([DP230102019](https://app.dimensions.ai/details/grant/grant.13279454))"
+citation:
+  type: paper-conference
+  event-title: Seminar Nasional Bahasa Ibu (SNBI) XVIII
+  event-place: Denpasar, Bali, Indonesia
+  event-date: 2026-02-20
+  available-date: 2026-02-17
+  citation-label: RajegHolleList2026
+  version: 1.0.0
 ---
 
 ## Introduction {#sec-intro}
 
-This paper reports on a Digital Humanities [@drucker2021] project of digitalising and curating large volumes of word lists, the so-called *Holle List vocabulary*. The Holle List project was initiated in the late 19^th^ century by [Karel Frederik Holle](https://en.wikipedia.org/wiki/Karel_Holle), a Dutch colonial administrator. His aim was to gain knowledge about the linguistic situation of the Dutch East Indies, corresponding to the present-day state of Indonesia. In the first edition of the Holle List [@holle1894], K. F. Holle set up a list of elicitation concepts (i.e., 905 concepts to be exact) given in Dutch [@holle1894, 8-38]. This list was distributed throughout the Indonesian archipelago. The goal was to collect the corresponding expressions/words of these elicited concepts (from various semantic domains) across more than two hundred indigenous regional language varieties in Indonesia.
+This paper[^1] reports on a Digital Humanities [@drucker2021] project of digitalising and curating large volumes of word lists, the so-called *Holle List vocabulary*. The Holle List project was initiated in the late 19^th^ century by [Karel Frederik Holle](https://en.wikipedia.org/wiki/Karel_Holle), a Dutch colonial administrator. His aim was to gain knowledge about the linguistic situation of the Dutch East Indies, corresponding to the present-day state of Indonesia. In the first edition of the Holle List [@holle1894], K. F. Holle set up a list of elicitation concepts (i.e., 905 concepts to be exact) given in Dutch [@holle1894, 8-38]. This list was distributed throughout the Indonesian archipelago. The goal was to collect the corresponding expressions/words of these elicited concepts (from various semantic domains) across more than two hundred indigenous regional language varieties in Indonesia.
 
-Between 1980 and 1987, W. A. L. Stokhof and colleagues (viz. Lia Saleh-Bronckhorst and Alma E. Almanar) edited, collated, and published (i) the different versions of the reference/master, elicitation Holle List as well as (ii) the corresponding expressions/words in the regional language-varieties into an eleven-volume publication series[^1]. These publications are available as open access under the Creative Commons License (see @fig-holle-list-search-output in @sec-data-source-acquisition). These publications consist of two main parts. The first one is the volume containing just the reference (or master) Holle List [@holleli1980], comprising elicitation concepts given in Dutch, English, and Indonesian/Malay together with their index numbers (see @fig-matching-master-and-regional-1); this is called *The New Basic List* (hereafter NBL) in Stokhof [-@holleli1980] because Stokhof and colleagues collated three different versions of the Holle List (namely those published in 1894, 1904/1911, and 1931; see @fig-matching-master-and-regional-1). The second part of the Holle List publications is the separate volumes containing the expressions/words of the regional language-varieties and their index numbers (see @fig-matching-master-and-regional-2 for an example from the Enggano language); these index numbers for words in the regional language-varieties correspond to the index numbers of the concepts in the reference Holle List/NBL. It is important to note that there is only one volume of the NBL; the content of the NBL is not repeated in the remaining volumes for the expressions/words in the regional language-varieties, but only the index numbers.
+[^1]: This is a webpage version of the same paper I have submitted and presented (on 20 February 2026) at the [*Seminar Nasional Bahasa Ibu* *(SNBI)* *XVII 2026*](https://snbi2025.my.canva.site/) (The Eighteenth National Seminar on Mother Language 2026) organised by the Linguistics Master's Program, Faculty of Humanities, Udayana University. Some of the works reported here (especially the digitalisation of the main, reference Holle List, the New Basic List, the Enggano Holle List, and some languages of the Barrier Islands, Sumatra), have been initiated when the author was a postdoctoral researcher at the University of Oxford, UK (2023-2025), working on developing lexical resources for Enggano, funded by the *Arts and Humanities Research Council* (AHRC), UK ([AH/W007290/1](https://app.dimensions.ai/details/grant/grant.12915105)).
 
-[^1]: See these Holle List publication series [on this page](https://openresearch-repository.anu.edu.au/search?spc.page=1&query=Holle%20Lists&scope=bbe2244b-212d-44b4-b33a-59048fd7e13f).
+Between 1980 and 1987, W. A. L. Stokhof and colleagues (viz. Lia Saleh-Bronckhorst and Alma E. Almanar) edited, collated, and published (i) the different versions of the reference/master, elicitation Holle List as well as (ii) the corresponding expressions/words in the regional language-varieties into an eleven-volume publication series[^2]. These publications are available as open access under the Creative Commons License (see @fig-holle-list-search-output in @sec-data-source-acquisition). These publications consist of two main parts. The first one is the volume containing just the reference (or master) Holle List [@holleli1980], comprising elicitation concepts given in Dutch, English, and Indonesian/Malay together with their index numbers (see @fig-matching-master-and-regional-1); this is called *The New Basic List* (hereafter NBL) in Stokhof [-@holleli1980] because Stokhof and colleagues collated three different versions of the Holle List (namely those published in 1894, 1904/1911, and 1931; see @fig-matching-master-and-regional-1). The second part of the Holle List publications is the separate volumes containing the expressions/words of the regional language-varieties and their index numbers (see @fig-matching-master-and-regional-2 for an example from the Enggano language); these index numbers for words in the regional language-varieties correspond to the index numbers of the concepts in the reference Holle List/NBL. It is important to note that there is only one volume of the NBL; the content of the NBL is not repeated in the remaining volumes for the expressions/words in the regional language-varieties, but only the index numbers.
+
+[^2]: See these Holle List publication series [on this page](https://openresearch-repository.anu.edu.au/search?spc.page=1&query=Holle%20Lists&scope=bbe2244b-212d-44b4-b33a-59048fd7e13f).
 
 In the above two-part publication setup, linguists, who are interested in the Dutch, English, and Indonesian/Malay translations of *a* given word in *a* given regional language, must manually match the index number of that regional word with the corresponding index number in the reference Holle List. Let us use the data snippet in @fig-matching-master-and-regional as an example.
 
@@ -209,15 +240,15 @@ With such a pattern from the snippet of the data in @tbl-sample-error, we might 
 
 Consider another word in @fig-digulmappi-1 referring to ‘navel’ (ID no. 61), namely *mòṙěkiò*. The OCR output of this word shows that the two *ò*-s inside it are rendered differently: as *o* in the first syllable and as *d* in the penultimate syllable. What is more, *d* is not only the OCR rendering for *ò* in the original PDF, but also for the second *à* in the word *àssi**à**běgǐ* (ID no. 67) ‘buttocks’; this word is rendered as *Assi**d**bégi* in the OCR output (@fig-digulmappi-2).
 
-With all these issues, the OCR output from image to text requires further *manual* verification and correction. Nevertheless, computational remediation from image to text on the cloud with *Tesseract* lets us obtain computationally searchable text data relatively quickly, rather than typing manually (cf. below). As we have seen from @fig-numfor, typically the conversion works well for simple characters (i.e., without diacritics or without other formatting, like underscore). This means that we reduce the time and effort to re-type (or manually type) these well-recognised characters, with effort focused primarily on verifying accented characters[^2].
+With all these issues, the OCR output from image to text requires further *manual* verification and correction. Nevertheless, computational remediation from image to text on the cloud with *Tesseract* lets us obtain computationally searchable text data relatively quickly, rather than typing manually (cf. below). As we have seen from @fig-numfor, typically the conversion works well for simple characters (i.e., without diacritics or without other formatting, like underscore). This means that we reduce the time and effort to re-type (or manually type) these well-recognised characters, with effort focused primarily on verifying accented characters[^3].
 
-[^2]: At the moment, all OCR outputs for the Holle List are still in private repository of the Holle List GitHub (<https://github.com/Holle-List>) because the results need manual checking and editing.
+[^3]: At the moment, all OCR outputs for the Holle List are still in private repository of the Holle List GitHub (<https://github.com/Holle-List>) because the results need manual checking and editing.
 
-Even if we decided that we would perform the digitalisation task through manual typing, the result of the typing still needs further manual checking and editing for *human error* and/or inconsistencies. This is what was done for an on-going digitalisation work of the Holle List for the remaining Barrier Islands Languages[^3] (other than Enggano), off the west coast of Sumatra [@rajegDigitisedAnnotatedHolle2025; @holle-list-barrier-islands]. The results from students’ group project[^4] [@rajeggroupwork] to digitalise these lists as an introduction to *WeSay* were first processed, combined, and then manually checked on Google Spreadsheet for tracking changes [cf. @fomin2006, 84].
+Even if we decided that we would perform the digitalisation task through manual typing, the result of the typing still needs further manual checking and editing for *human error* and/or inconsistencies. This is what was done for an on-going digitalisation work of the Holle List for the remaining Barrier Islands Languages[^4] (other than Enggano), off the west coast of Sumatra [@rajegDigitisedAnnotatedHolle2025; @holle-list-barrier-islands]. The results from students’ group project[^5] [@rajeggroupwork] to digitalise these lists as an introduction to *WeSay* were first processed, combined, and then manually checked on Google Spreadsheet for tracking changes [cf. @fomin2006, 84].
 
-[^3]: This work (i) continues a previous digitalisation sub-project of the Enggano Holle List (funded by the Arts and Humanities Research Council \[Grant ID: [AH/W007290/1](https://gtr.ukri.org/projects?ref=AH%2FW007290%2F1){target="_blank"}\] led by the University of Oxford, UK) and (ii) is now part of the Australian Research Council (ARC) research (Grant ID: [DP230102019](https://dataportal.arc.gov.au/NCGP/Web/Grant/Grant/DP230102019){target="_blank"}) on Languages of Barrier Islands in Sumatra, Indonesia (led by the Australian National University in Canberra, Australia).
+[^4]: This work (i) continues a previous digitalisation sub-project of the Enggano Holle List (funded by the Arts and Humanities Research Council \[Grant ID: [AH/W007290/1](https://gtr.ukri.org/projects?ref=AH%2FW007290%2F1){target="_blank"}\] led by the University of Oxford, UK) and (ii) is now part of the Australian Research Council (ARC) research (Grant ID: [DP230102019](https://dataportal.arc.gov.au/NCGP/Web/Grant/Grant/DP230102019){target="_blank"}) on Languages of Barrier Islands in Sumatra, Indonesia (led by the Australian National University in Canberra, Australia).
 
-[^4]: The list of the students’ names contributing to this work and the languages they work on is available at <https://github.com/complexico/lexico-holle-list-barrier-islands?tab=readme-ov-file#student-contributors>. They are also listed as the co-authors for the data publication for each language; access this information at <https://github.com/complexico/holle-list-barrier-islands?tab=readme-ov-file#updates-from-students-contributions>
+[^5]: The list of the students’ names contributing to this work and the languages they work on is available at <https://github.com/complexico/lexico-holle-list-barrier-islands?tab=readme-ov-file#student-contributors>. They are also listed as the co-authors for the data publication for each language; access this information at <https://github.com/complexico/holle-list-barrier-islands?tab=readme-ov-file#updates-from-students-contributions>
 
 @tbl-correction-sample shows how tracking changes are organised as a table. The regional lexical items that were manually typed by students (`lx_all` column) are in a separate column from that containing the corrected forms (called `lx_all_correct`). The `ID` column refers to the Holle List index number and a separate column for its correction is also provided but not shown here.
 
